Fix alignment of project banner image on small screens. Add archive of site uploaded to server.

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ img.full {
 
 img.bottom {
     max-height: 400px !important;
-    object-position: 0 -300px !important;
+    object-position: center !important;
 }
 
 header {
